--- a/onserver/package.json
+++ b/onserver/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "node_server_test.js",
+  "name": "node_server_test",
   "version": "1.0.0",
-  "description": "",
   "main": "node_server_test.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mysql": "^2.17.1"
-  }
+    "mysql": "^2.17.1",
+    "sanitize-html": "^1.20.1"
+  },
+  "devDependencies": {},
+  "description": ""
 }
